--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 字体 外部链接 -->
-    <!-- <link    -->
-        <!-- rel="stylesheet" -->
-        <!-- href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" -->
-    <!-- /> -->
+    <!-- 图标库 -->
+    <link rel="stylesheet" href="./Resources.txt/iconfont.css">
+    <!-- AOS 动画 -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- 自定义 css -->
     <link rel="stylesheet" href="./style.css" />
     <title>（待取名）</title>
@@ -16,6 +15,13 @@
     <header>
         <!-- nav : 导航 -->
         <nav class="dao_hang_lan">
+            <div class="theme">
+                <input type="checkbox" id="checkbox" class="checkbox">
+                <label class="label" for="checkbox">
+                    <div class="ball"></div>
+                </label>
+            </div>
+            </div>
             <img src="./images/tou_xiang.png" alt="头像" class="tou_xiang"/>
             <ul class="dao_hang_lie">
                 <!-- <a>中的 href="#" 为链接到当前页面的顶部 -->
@@ -41,7 +47,7 @@
     </header>
 
     <!-- 服务: serices -->
-    <section class="fu_wu">
+    <section class="fu_wu" data-aos="fade-right">
         <!-- 容器: container -->
         <div class="rong_qi">
             <!-- 网格包装纸: grid-wrapper -->
@@ -82,7 +88,7 @@
     </section>
 
     <!-- Numbers: hao_ma -->
-    <section class="hao_ma">
+    <section class="hao_ma" data-aos="fade-left">
         <h1 class="num-text">我们的待客风貌</h1>
         <p>文字待放区*1 -占位符--占位符--占位符--占位符--占位符--占位符--占位符--占位符--占位符--占位符--占位符--占位符--占位符--占位符-</p>
         <div class="rong_qi">
@@ -115,10 +121,10 @@
     </section>
 
     <!-- 项目:projects -->
-    <section class="projects">
+    <section class="projects" data-aos="zoom-in">
         <h1>我们最新的项目</h1>
         <div class="projects-images">
-            <div class="prj-img">
+            <div class="prj-img" data-aos="zoom-in">
                 <img class="img1" src="./images/part3-1.png" alt="图片">
                 <div class="details">
                     <h2>创意</h2>
@@ -126,7 +132,7 @@
                     <img src="./images/part-3-jian_tou.png" alt="图片">
                 </div>
             </div>
-            <div class="prj-img">
+            <div class="prj-img" data-aos="zoom-in">
                 <img src="./images/part3-2.png" alt="图片">
                 <div class="details">
                     <h2>创意</h2>
@@ -134,7 +140,7 @@
                     <img src="./images/part-3-jian_tou.png" alt="图片">
                 </div>
             </div>
-            <div class="prj-img">
+            <div class="prj-img" data-aos="zoom-in">
                 <img src="./images/part3-3.png" alt="图片">
                 <div class="details">
                     <h2>创意</h2>
@@ -142,7 +148,7 @@
                     <img src="./images/part-3-jian_tou.png" alt="图片">
                 </div>
             </div>
-            <div class="prj-img">
+            <div class="prj-img" data-aos="zoom-in">
                 <img src="./images/part3-4.png" alt="图片">
                 <div class="details">
                     <h2>创意</h2>
@@ -150,7 +156,7 @@
                     <img src="./images/part-3-jian_tou.png" alt="图片">
                 </div>
             </div>
-            <div class="prj-img">
+            <div class="prj-img" data-aos="zoom-in">
                 <img src="./images/part3-5.png" alt="图片">
                 <div class="details">
                     <h2>创意</h2>
@@ -158,7 +164,7 @@
                     <img src="./images/part-3-jian_tou.png" alt="图片">
                 </div>
             </div>
-            <div class="prj-img">
+            <div class="prj-img" data-aos="zoom-in">
                 <img src="./images/part3-6.png" alt="图片">
                 <div class="details">
                     <h2>创意</h2>
@@ -172,7 +178,7 @@
     <section class="team">
         <h1 class="team-h1">认识我们的团队</h1>
         <div class="part3-grid-wrapper">
-            <div class="team-men">
+            <div class="team-men" data-aos="zoom-in">
                 <img class="team-img" src="./images/team-men-1.jpg">
                 <h1>No.1</h1>
                 <h2>职位-文本占用</h2>
@@ -181,7 +187,7 @@
                     <img class="part3-tu_biao" src="./images/part-3-QQ.png">
                 </div>
             </div>
-            <div class="team-men">
+            <div class="team-men" data-aos="zoom-in">
                 <img class="team-img" src="./images/team-men-2.jpg">
                 <h1>绿色小鹿</h1>
                 <h2>职位-文本占用</h2>
@@ -190,7 +196,7 @@
                     <img class="part3-tu_biao" src="./images/part-3-QQ.png">
                 </div>
             </div>
-            <div class="team-men">
+            <div class="team-men" data-aos="zoom-in">
                 <img class="team-img" src="./images/team-men-3.jpg">
                 <h1>丁新星</h1>
                 <h2>职位-文本占用</h2>
@@ -199,7 +205,7 @@
                     <img class="part3-tu_biao" src="./images/part-3-QQ.png">
                 </div>
             </div>
-            <div class="team-men">
+            <div class="team-men" data-aos="zoom-in">
                 <img class="team-img" src="./images/team-men-4.jpg">
                 <h1>诗篇~</h1>
                 <h2>职位-文本占用</h2>
@@ -211,10 +217,10 @@
         </div>
     </section>
     <!-- 客户评价: Testimonials -->
-    <section class="testimonials">
+    <section class="testimonials" data-aos="fade-right">
         <h1 class="testimonials-h1">我们的客户评价</h1>
         <p class="testimonials-p">评价-文本占位符</p>
-        <div class="pingjia-gird-wrapper">
+        <div class="pingjia-grid-wrapper">
             <!-- 评价: review -->
             <div class="review">
                 <img class="pinglun_dingzi" src="./images/ping_lun-ding_zi.png">
@@ -254,9 +260,116 @@
                     -文本占位符-文本占位符-文本占位符-文本占位符-文本占位符-文本占位符-文本占位符
                     -文本占位符-文本占位符-文本占位符-文本占位符-文本占位符-文本占位符-文本占位符
                 </p>
-            </div>
-            
+            </div>     
         </div>
     </section>
+    <!-- 博客: blog -->
+    <section class="blogs" data-aos="fade-left">
+        <h1 class="blog-h1">我们最新的互动</h1>
+        <div class="blog_grid-wrapper">
+            <div class="blog">
+                <img src="./images/part4-blog-1.png">
+                <h1>用于实时更新投票的软件</h1>
+                <p>
+                    博客-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-
+                    文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-
+                </p>
+                <a href="#">了解更多...</a>
+            </div>
+            <div class="blog">
+                <img src="./images/part4-blog-2.png">
+                <h1>用于实时更新投票的软件</h1>
+                <p>
+                    博客-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-
+                    文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-
+                </p>
+                <a href="#">了解更多...</a>
+            </div>
+            <div class="blog">
+                <img src="./images/part4-blog-3.png">
+                <h1>用于实时更新投票的软件</h1>
+                <p>
+                    博客-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-
+                    文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-文本占用符-
+                </p>
+                <a href="#">了解更多...</a>
+            </div>
+        </div>
+    </section>
+    <!-- 招募: call to action -->
+    <section class="kai-shi">
+        <div class="ks_kuang-kuang">
+            <div class="ks_wen-ben">
+                <h1>快加入我们叭</h1>
+                <p>开始-文本占位符-文本占位符-文本占位符-文本占位符-文本占位符</p>
+            </div>
+            <div>
+                <button class="ks_an-niu">加入</button>
+            </div>
+        </div>
+    </section>
+    <!-- 页脚: footer -->
+    <section class="footer">
+        <div class="fo_grid-wrapper">
+            <div class="lie-4 footer1">
+                <h1>（工作室名称）</h1>
+                <p>列-文本占位符-文本占位符-文本占位符-文本占位符-文本占位符-文本占位符-文本占位符</p>
+                <div class="social-profiles">
+                    <img class="part3-tu_biao" src="./images/part-3-wei-xin.png">
+                    <img class="part3-tu_biao" src="./images/part-3-QQ.png">
+                </div>
+            </div>
+            <div class="lie-4 footer2">
+                <h1>工作室信息</h1>
+                <h4>中国湖北</h4>
+                <h4>武汉市江岸区</h4>
+                <h4>027-430010</h4>
+                <h4>aaawoshenmoyebuzhidaoa.com</h4>
+                <h4>website.com</h4>
+            </div>
+            <div class="lie-4 footer3">
+                <h1>关于我们</h1>
+                <h4>工作室</h4>
+                <h4>项目</h4>
+                <h4>成就</h4>
+                <h4>奖项</h4>
+                <h4>开源</h4>
+            </div>
+            <div class="lie-4 footer4">
+                <h1>解决方案</h1>
+                <h4>商业定制</h4>
+                <h4>网页设计</h4>
+                <h4>未来展望</h4>
+                <h4>文本占位</h4>
+                <h4>文本占位</h4>
+            </div>
+        </div>
+        <hr class="heng-xian"/>
+        <div class="bei-an">
+            <p>
+                黄冈职业技术学院©版权所有 Huanggang Polytechnic College 
+                地址：湖北省黄冈市黄州区南湖桃园街109号[438002] 制作维护：信息技术中心
+            </p>
+            <p>
+                <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener noreferrer">
+                鄂ICP备06007463号-1 鄂ICP备06007463号-2 鄂ICP备06007463号-3</a>&nbsp
+                <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=42110202000100" 
+                rel="noopener noreferrer">鄂公网安备 42110202000100号</a>
+            </p>
+        </div>
+        <!-- 返回顶部 -->
+        <i class="iconfont icon-shangjiantou1" aria-hidden="true" id="dingbu"></i>
+    </section>
+    <!-- AOS 动画 -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 200,
+        delay: 100,
+        duration: 1000,
+      });
+    </script>
+    <!-- app.js -->
+    <script src="./app.js"></script>
 </body>
 </html>
